LIVE-96 Fixed multiline ellipsis with dropdown and collapse/accordion button.

--- a/www/app/stylus/components/_overlayX.styl
+++ b/www/app/stylus/components/_overlayX.styl
@@ -30,7 +30,7 @@
             color:white
     
     .ox-content-inner
-        padding: 30px 20px
+        padding: 30px 20px 0
 
 .accordion
     width:100%
@@ -59,7 +59,7 @@
         height: 24px;
         display: block;
         position: absolute;
-        bottom: 0;
+        bottom: -28px;
         width: 24px;
         background-color: rgba(255, 255, 255, 0.77)
         right: 0;
